--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/server.js"
-
   },
   "author": "Phuong Quyen",
   "license": "ISC",
@@ -14,10 +13,12 @@
     "@babel/core": "7.15.4",
     "@babel/node": "7.15.4",
     "@babel/preset-env": "7.15.4",
-    "body-parser": "1.19.1",
+    "bcryptjs": "3.0.2",
+    "body-parser": "^1.20.3",
     "dotenv": "10.0.0",
-    "ejs": "3.1.6",
-    "express": "4.17.2",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "mysql2": "3.13.0",
     "nodemon": "^3.1.9"
   },
   "type": "commonjs"
